# roofline

./: .gitignore  DEBUGGING.md  INSTALL.md  Makefile  README.md  roofline.py
benchmarks/: Makefile  main.cpp  roi_api.h
client/: CMakeLists.txt  DEBUGGING.md  README.md  count_fp.hpp  main.cpp  point.cpp  point.hpp  thread_data.cpp  thread_data.hpp
client/app_example/: Makefile  hello.c  sim_api.h
testing/fp_counter/: CMakeLists.txt  main.cpp
testing/sleeper/: Makefile  main  main.cpp
